@@ -1,3 +1,8 @@
+2017-05-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/bug-2188.c:
+	  Add extern declaration to make test compile where functions aren't inlined.
+
 2017-05-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/stm8/gen.c (genMove_o): fixed bug #2607
